<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/input_txt_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="+"/>
        <Button
            android:id="@+id/button_minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:enabled="false"/>
        <Button
            android:id="@+id/button_mult_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:enabled="false"/>
        <Button
            android:id="@+id/button_div_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:enabled="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/output_text_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_eq_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="="
        android:enabled="false"/>



</LinearLayout>